syntax = "proto3";
package DTO;

option java_package = "de.cebitec.gpms.dto";
option java_outer_classname = "impl";
option optimize_for = SPEED;

// GPMS

message GPMSString {
  string value = 1;
}

message GPMSLong {
  uint64 value = 1;
}

message RoleDTO {
  string name = 1;
}

message RoleDTOList {
  repeated RoleDTO role = 1;
}

message ProjectClassDTO {
  string name = 1;
  RoleDTOList roles = 2;
}

message ProjectClassDTOList {
  repeated ProjectClassDTO project_class = 1;
}

message ProjectDTO {
  string name = 1;
  ProjectClassDTO project_class = 2;
  string baseURI = 3;
}

message ProjectDTOList {
  repeated ProjectDTO project = 1;
}

message MembershipDTO {
  ProjectDTO project = 1;
  RoleDTO role = 2;
}

message MembershipDTOList {
  repeated MembershipDTO membership = 1;
}

message DataSourceTypeDTO {
  string name = 1;
}

message DataSourceDTO {
  DataSourceTypeDTO type = 1;
  string name = 2;
}

message DataSource_ASDTO {
  DataSourceDTO parent = 1;
  string URL = 2;
}

message DataSourceDTOList {
  repeated DataSourceDTO datasource = 1;
}